<resources>
    <string name="app_name">모우리</string>
    <string name="binding_error">Binding not initialized to reference the view.</string>
    <string name="nothing">아무것도 없어요</string>
    <string name="desc_app_logo">앱 로고</string>
    <string name="cancel">취소</string>
    <string name="empty" />

    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_missions">Missions</string>
    <string name="bottom_nav_members">Members</string>
    <string name="drawer_header_group_list">그룹 리스트</string>

    <!-- RegisterFragment -->
    <string name="register_please_enter_nickname">닉네임을\n입력해주세요</string>
    <string name="register_nickname_hint">(1자 이상 11자 이하)</string>
    <string name="register_nickname_error_msg">닉네임을 확인해주세요</string>
    <string name="register_fail_msg">회원가입에 실패했습니다.</string>
    <string name="desc_profile_image">프로필 이미지</string>

    <!-- CustomTitleView -->
    <string name="title_view_back">뒤로가기 타이틀 뷰</string>
    <string name="title_view_close">종료 타이틀 뷰</string>
    <string name="title_view_plus">추가 타이틀 뷰</string>
    <string name="desc_title_view_back">뒤로가기 버튼</string>
    <string name="desc_title_view_close">창 끄기 버튼</string>
    <string name="desc_title_view_plus">정보 추가 버튼</string>
    <string name="desc_title_view_plus_members">구성원 추가 버튼</string>
    <string name="title_view_text">View Title</string>

    <!-- InviteCheckFragment -->
    <string name="invite_check_title">\'우리\'의 \n초대를 받으셨나요?</string>
    <string name="invite_check_yes">네, 초대받았어요!</string>
    <string name="invite_check_no">초대가 뭐죠?\n저는 몰라요 ㅠㅠ</string>

    <!-- GroupFragment -->
    <string name="group_name_title">\'우리\'의\n이름을 정해주세요</string>
    <string name="group_name_complete">완료</string>
    <string name="group_name">정직한 코박쥐들</string>
    <string name="group_name_hint">\'우리\'의 이름을 입력해주세요</string>
    <string name="group_invite_title">초대코드를\n입력해주세요</string>
    <string name="group_name_invalid">그룹 이름은 1자 이상 11자 이하에요!</string>
    <string name="group_invite_invalid">존재하지 않은 초대 코드 입니다!</string>

    <!-- HomeFragment -->
    <string name="desc_home_snowman_face">눈사람 얼굴</string>
    <string name="desc_home_snowman_body">눈사람 몸통</string>
    <string name="desc_home_snowman_button">눈사람 단추</string>
    <string name="all_complete">완료</string>
    <string name="desc_home_snowman_o_mouth">눈사람 오 모양 입술</string>
    <string name="desc_home_snowman_left_eye">눈사람 왼쪽 눈</string>
    <string name="desc_home_snowman_right_eye">눈사람 오른쪽 눈</string>
    <string name="desc_home_snowman_left_pupil">눈사람 왼쪽 동공</string>
    <string name="desc_home_snowman_right_pupil">눈사람 오른쪽 동공</string>
    <string name="desc_home_snowman_left_hand">눈사람 왼손</string>
    <string name="desc_home_exclamation">느낌표</string>
    <string name="desc_home_heart">하트</string>
    <string name="desc_home_snowman_right_hand">눈사람 오른손</string>
    <string name="desc_home_big_heart">왕 하트</string>
    <string name="home_new_group">새로운 그룹을 추가해주세요.</string>
    <string name="home_no_group">그룹이 없어요.</string>
    <string name="home_welcome_msg">%s님,\n오늘도 아리아리!!</string>

    <!-- MissionsFragment -->
    <string name="item_missions_stamp_count">%d/%d</string>
    <string name="missions_my_mission">%s님의 미션</string>
    <string name="missions_not_done">미완료</string>
    <string name="missions_done">완료</string>
    <string name="missions_fail">실패</string>
    <string name="missions_no_mission">해당하는 미션이 없어요.</string>
    <string name="missions_no_group">홈화면에서 그룹을 추가한 후 미션을 추가할 수 있어요!</string>

    <!-- StampFragment -->
    <string name="stamps_mission">매일 잔디 채우기</string>
    <string name="stamps_number">1</string>
    <string name="stamps_complete">미션인증</string>
    <string name="desc_item_stamps_stamp">스탬프</string>
    <string name="desc_item_stamps_icon">스탬프 아이콘</string>

    <!-- DialogFragment -->
    <string name="dialog_yes">예</string>
    <string name="dialog_no">아니오</string>
    <string name="dialog_message">계속 진행하시겠습니까?</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_save">저장</string>

    <!-- NotificationFragment-->
    <string name="item_notification_title"><font color="#000000">모우리</font>님이 <b>매일 잔디채우기</b> 미션에 <b>2</b>번째 스탬프를 찍었어요!!!!!!!!!!!!!!!!!!!!!</string>

    <!-- MissionsAddFragment -->
    <string name="missions_add_what_mission_title">어떤 미션인가요?</string>
    <string name="missions_add_what_mission">미션명을 입력하세요.</string>
    <string name="missions_add_how_mission_title">얼마나 오래 하시나요?</string>
    <string name="missions_add_count_front">미션을</string>
    <string name="missions_add_count_back">번 수행할거예요.</string>
    <string name="missions_add_when_start">부터</string>
    <string name="missions_add_what_invalid">1~15자 사이로 입력해주세요.</string>
    <string name="missions_add_when_start_title">시작일</string>
    <string name="missions_add_when_start_hint">2021년 10월 11일</string>
    <string name="missions_add_when_end_title">종료일</string>
    <string name="missions_add_when_end_hint">2021년 10월 11일</string>
    <string name="missions_add_when_invalid">종료일이 시작일보다 빨라요.</string>
    <string name="missions_add_count_hint">10</string>

    <!-- MembersFragment -->
    <string name="desc_members_profile">구성원 프로필 이미지</string>
    <string name="tv_title_view_invite">초대하기</string>
    <string name="members_title">\'우리\'들</string>
    <string name="members_share">공유하기</string>
    <string name="members_invite_code_title">초대코드</string>
    <string name="members_invite_code_copy_complete">초대코드가 클립보드에 복사되었습니다.</string>
    <string name="members_no_members">구성원이 없어요.</string>

    <!-- StampDetailFragment -->
    <string name="stamp_detail_user">%s님의</string>
    <string name="stamp_detail_picture">인증 사진</string>
    <string name="stamp_detail_comment">한줄평</string>
    <string name="stamp_detail_hint">한줄평을 작성해주세요</string>
    <string name="stamp_detail_valid">(5자 이상 100자 이하)</string>
    <string name="stamp_detail_complete">인증완료</string>

    <!-- PictureDialogFragment -->
    <string name="dialog_picture_gallery">GALLERY</string>
    <string name="dialog_picture_camera">CAMERA</string>
    <string name="desc_dialog_picture_camera_icon">카메라 아이콘</string>
    <string name="desc_dialog_picture_gallery_icon">갤러리 아이콘</string>

    <!-- NetworkDialogFragment -->
    <string name="dialog_network_retry">재시도</string>
    <string name="dialog_network_content">데이터 요청에 실패하였습니다.\n사용중인 네트워크 상태를 확인해주세요.\n다시 요청 하시겠습니까?</string>
    <string name="stamp_detail_comment_invalid">5~100자 사이로 입력해주세요.</string>
    <string name="desc_iv_stamp_detail_highlight_circle">강조표시 점</string>
</resources>
