<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_invite_check_xml_constraintlayout_scene">

        <TextView
            android:id="@+id/tv_invite_check_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/invite_check_title"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_invite_check_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_sky_blue_line_30"
            android:padding="24dp"
            android:text="@string/invite_check_yes"
            android:textColor="@color/sky_blue_2094FF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_invite_check_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_invite_check_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_invite_check_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_sky_blue_line_30"
            android:padding="8dp"
            android:text="@string/invite_check_no"
            android:textColor="@color/sky_blue_2094FF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_invite_check_yes"
            app:layout_constraintStart_toStartOf="@+id/btn_invite_check_yes"
            app:layout_constraintTop_toBottomOf="@id/btn_invite_check_yes" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
