<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ariari.mowoori.ui.custom.TitleViewMode" />

        <variable
            name="viewModel"
            type="com.ariari.mowoori.ui.missions_add.MissionsAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.missions_add.MissionsAddFragment">

        <com.ariari.mowoori.ui.custom.CustomTitleView
            android:id="@+id/title_view_missions_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:onBackClick="@{viewModel::setBackBtnClick}"
            app:titleViewMode="@{TitleViewMode.TITLE_VIEW_BACK_BUTTON}" />

        <TextView
            android:id="@+id/tv_missions_add_what_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/missions_add_what_mission_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_view_missions_add" />

        <EditText
            android:id="@+id/et_missions_add_what"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="no"
            android:hint="@string/missions_add_what_mission"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_missions_add_what_title" />

        <TextView
            android:id="@+id/tv_missions_add_when_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/missions_add_how_mission_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_missions_add_what" />

        <EditText
            android:id="@+id/et_missions_add_when"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="no"
            android:hint="@string/missions_add_when"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_missions_add_when_title" />

        <TextView
            android:id="@+id/tv_missions_add_count_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/missions_add_count_front"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_missions_add_count_middle"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_missions_add_when" />

        <TextView
            android:id="@+id/tv_missions_add_count_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missions_add_count_middle"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_missions_add_count_back"
            app:layout_constraintStart_toEndOf="@id/tv_missions_add_count_front"
            app:layout_constraintTop_toTopOf="@id/tv_missions_add_count_front" />

        <TextView
            android:id="@+id/tv_missions_add_count_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missions_add_count_back"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_missions_add_count_middle"
            app:layout_constraintTop_toTopOf="@id/tv_missions_add_count_front" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_complete"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:text="@string/all_complete"
            android:textColor="@color/sky_blue_2094FF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            android:onClick="@{()->viewModel.postMission()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/sky_blue_2094FF"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
