<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ariari.mowoori.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:text="@string/register_please_enter_nickname"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_register_profile"
            imageUri="@{viewModel.profileImageUri}"
            isCircle="@{true}"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_marginTop="95dp"
            android:contentDescription="@string/desc_profile_image"
            android:onClick="@{()->viewModel.clickProfile()}"
            android:src="@drawable/ic_profile_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_title" />

        <EditText
            android:id="@+id/et_register_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="33dp"
            android:autofillHints="username"
            android:background="@null"
            android:gravity="center"
            android:inputType="text"
            android:lines="1"
            android:maxLength="10"
            android:text="@={viewModel.profileText}"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_register_profile"
            tools:ignore="LabelFor"
            tools:text="전설의 코박쥐" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@id/et_register_nickname"
            app:layout_constraintStart_toStartOf="@id/et_register_nickname"
            app:layout_constraintTop_toBottomOf="@id/et_register_nickname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/register_nickname_hint"
            android:textColor="@color/gray_545454"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/et_register_nickname"
            app:layout_constraintTop_toBottomOf="@id/et_register_nickname" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_complete"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:text="@string/all_complete"
            android:textColor="@color/sky_blue_2094FF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/sky_blue_2094FF"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
