<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ariari.mowoori.ui.custom.TitleViewMode" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ariari.mowoori.ui.custom.CustomTitleView
            android:id="@+id/title_view_missions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:text="나의 미션"
            app:titleViewMode="@{TitleViewMode.TITLE_VIEW_PLUS_BUTTON}" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_missions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_view_missions"
            app:tabIndicatorColor="@color/sky_blue_2094FF"
            app:tabIndicatorHeight="4dp"
            app:tabRippleColor="@android:color/transparent"
            app:tabSelectedTextColor="@color/sky_blue_2094FF"
            app:tabTextAppearance="@style/missions_tab_text"
            app:tabTextColor="@color/black">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_not_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/missions_not_done" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/missions_done" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/missions_fail" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout_missions"
            tools:listitem="@layout/item_missions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
